<resources>
    <string name="app_name">EQuiz</string>
    <string name="text_full_name">Full name</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm password</string>
    <string name="text_login">Login</string>
    <string name="text_forgotpass">Forgot password?</string>
    <string name="text_register">Register</string>
    <string name="text_skip">Skip</string>
    <string name="text_next">Next</string>
    <string name="text_rate">Rate this exam</string>
    <string name="text_exam_result_title">Exam\'s result</string>
    <string name="text_back_home">Back to Home</string>
    <string name="text_congratulation">Congratulation</string>
    <string name="text_complete_time">Complete time</string>
    <string name="text_correct_answer">Correct answers</string>
    <string name="text_page_question">Question </string>
    <string name="text_by">by</string>
    <string name="text_correct">Correct</string>
    <string name="text_wrong">Wrong</string>
    <string name="text_date">Date</string>
    <string name="text_question_type">Question type</string>
    <string name="text_question_answer">Question answer</string>
    <string name="text_save">Save</string>
    <string name="text_change_email">Change email</string>
    <string name="text_change_password">Change password</string>
    <string name="text_question_title">Question title</string>
    <string name="text_question_choice">Question choice</string>
    <string name="text_question_list_of_choice">List of choices</string>
    <string name="text_exam_title">Exam title</string>
    <string name="text_exam_duration">Duration</string>
    <string name="text_exam_best_complete_time">Best complete time</string>
    <string name="text_exam_num_of_question">Number of questions: </string>
    <string name="text_exam_created_date">Created date: </string>
    <string name="text_exam_done_date">Done date</string>
    <string name="text_exam_comment">comment</string>
    <string name="text_exam_done">You have done this exam for</string>
    <string name="text_exam_times">times</string>
    <string name="text_exam_has_comment">This exam has  </string>
    <string name="text_exam_no_comment">There is no comment yet</string>
    <string name="text_exam_list_of_question">List of questions</string>
    <string name="text_no_exam">There is no exam yet</string>
    <string name="text_no_question">There is no question yet</string>
    <string name="text_no_statistic">You have not done any exam yet</string>
    <string name="text_current_email">Current Email</string>
    <string name="text_new_email">New Email</string>
    <string name="text_current_password">Current password</string>
    <string name="text_new_password">New password</string>
    <string name="text_camera">Camera</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_change">Change</string>
    <string name="text_reset">Reset</string>
    <string name="text_progress_login">Authenticating &#8230;</string>
    <string name="text_progress_register">Creating &#8230;</string>
    <string name="text_progress_change">Changing &#8230;</string>
    <string name="text_progress_save">Saving &#8230;</string>
    <string name="text_progress_submit">Submitting &#8230;</string>
    <string name="text_progress_reset">Resetting &#8230;</string>
    <string name="text_progress_retrieving">Retrieving data &#8230;</string>
    <string name="text_progress_quit">Quiting &#8230;</string>
    <string name="text_progress_skip">Skipping &#8230;</string>
    <string name="text_progress_finish_maintain">Finishing maintain &#8230;</string>
    <string name="text_progress_moving">Moving to result screen &#8230;</string>
    <string name="text_do_exam">Do you want to do this exam? </string>
    <string name="text_progress_sign_out">Signing out &#8230;</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_quit_exam">Do you want to quit doing this exam?</string>
    <string name="text_submit_exam">Do you want to submit this exam?</string>
    <string name="text_progress_collecting_result">Collecting results &#8230;</string>
    <string name="text_progress_back_home">Moving back home &#8230;</string>
    <string name="text_notification">Notification</string>
    <string name="text_leave_comment">Leave comments</string>
    <string name="text_notification_type">Notification Type</string>
    <string name="text_start_date">Start date</string>
    <string name="text_end_date">End date</string>
    <string name="text_start_time">Start time</string>
    <string name="text_end_time">End time</string>
    <string name="text_push">Push</string>
    <string name="text_list_of_questions">List of questions</string>
    <string name="text_about_name">Student name: </string>
    <string name="text_about_id">Student ID: </string>
    <string name="text_about">About</string>
    <string name="hint_question_title">Question title</string>
    <string name="hint_question_choice">Question choice</string>
    <string name="hint_exam_title">Exam title</string>
    <string name="error_name_not_fill">Please fill in full name</string>
    <string name="error_email_not_fill">Please fill in email!</string>
    <string name="error_pass_not_fill">Please fill in password!</string>
    <string name="error_cpass_not_fill">Please fill in confirm password!</string>
    <string name="error_title_not_fill">Please fill in title</string>
    <string name="error_choice_not_fill">Please fill in choice</string>
    <string name="error_max_choice_length">Maximum choice is 5</string>
    <string name="error_min_choice_length">You must have at least 4 choice</string>
    <string name="error_max_answer_length">Maximum answer is 3</string>
    <string name="error_min_answer_length">You must choose at least one answer</string>
    <string name="error_min_question_length">You must have at least 5 question for each exam</string>
    <string name="error_max_question_length">Maximum question is 30</string>
    <string name="error_pass_cpass_not_equal">Password and Confirm Password is not equal!</string>
    <string name="error_email_format">Wrong email format!</string>
    <string name="error_pass_min_length">Password must be at least 6 character</string>
    <string name="error_pass_max_length">Password max character is 15</string>
    <string name="error_empty_comment">Please leave a comment before go to next step</string>
    <string name="error_empty_star">Please rate before go to next step</string>
    <string name="error_empty_noti_type">Please choose notification type</string>
    <string name="error_empty_noti_time">Please set active time for this notification</string>
    <string name="error_invalid_noti_time">
        End date must be equal or larger than start date!
        \nEnd time must be larger than start time if on the same date!
        \nStart time must be larger than current time!
        \nPlease try again!
    </string>
    <string name="login_failed">Login Failed!\nPlease try again!</string>
    <string name="login_success">Login Successfully</string>
    <string name="change_email_failed">Change Email Failed!\nPleae try again!</string>
    <string name="change_email_success">Change Email Successfully</string>
    <string name="change_password_success">Change Password Successfully</string>
    <string name="change_password_failed">Change Password Failed!\nPlease try again!</string>
    <string name="register_success">Register Successfully</string>
    <string name="register_failed">Register Failed!\nPlease try again!</string>
    <string name="update_profile_success">Update user profile successfully</string>
    <string name="reset_password_success">Reset password successfully.\n Please check your email for reset password link!</string>
    <string name="reset_password_failed">Reset password Failed!\nPlease try again!</string>
    <string name="save_question_sucess">Save question successfully</string>
    <string name="save_question_failed">Save question failed!\nPlease try again!</string>
    <string name="save_exam_sucess">Save exam successfully</string>
    <string name="save_exam_failed">Save exam failed!\nPlease try again!</string>
    <string name="press_twice_to_minimize">Please click BACK again to minimize</string>
    <string name="save_result_success">Submit successfully</string>
    <string name="save_result_failed">Submit failed!\nPlease try again!</string>
    <string name="warning_not_choose_answer">You should choose answers for all questions</string>
    <string name="submit_comment_success">Your comment has been submitted</string>
    <string name="submit_comment_failed">Can not submit your comment!\nPlease try again!</string>
    <string name="warning_1_minute_left">You have 1 minute left</string>
    <string name="warning_30_seconds_left">You have 30 seconds left</string>
    <string name="warning_15_seconds_left">You have 15 seconds left</string>
    <string name="alert_exam_will_be_submit">Your exam will be submit after few seconds</string>
    <string name="alert_you_must_create_push_notification">You must create a push notification before </string>
    <string name="push_notification_success">Push notification successfully</string>
    <string name="finish_maintain">\"Maintain App complete. You can create new push notification\"</string>
    <string name="alert_app_in_maintain">
        App is under maintaining, Please abort your action and logout out!
        \nApp will be automatic logout after 10 seconds
        \nThank you!
    </string>
    <string name="alert_app_in_maintain_Login">
        App is under maintaining, Please try again later!
        \nThank you!
    </string>
    <string name="already_push_noti">You already have push notification to inform maintain time.
    \nPlease finish it before create a new one</string>
    <string name="nav_home">Home</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_exam">Exam</string>
    <string name="nav_question">Question</string>
    <string name="nav_account">Account</string>
    <string name="menu_push_notification">Push Notification</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Log out</string>
    <string name="toolbar_add_question">Add Question</string>
    <string name="toolbar_modify_question">Modify Question</string>
    <string name="toolbar_add_exam">Add Exam</string>
    <string name="toolbar_modify_exam">Modify Exam</string>
    <string name="toolbar_detail">Exam Detail</string>
    <string name="text_add">Add</string>
    <string name="text_create">Create</string>
    <string name="text_modify">Modify</string>
    <string name="text_start">Start</string>
    <string name="text_submit">Submit</string>
    <string name="toolbar_result">Result</string>
    <string name="notification_type_maintain">Maintain</string>
    <string name="notification_type_finish">Finish</string>
    <string name="notification_message_maintain">App will be maintain from</string>
    <string name="notification_to">to</string>
    <string name="notification_message_finish">
        Thank you for been waiting!
        \nApp maintain completely! You can access EQuiz app from now!</string>
    <string name="notification_new_exam">New Exam</string>
    <string name="notification_new_exam_message">was added. You can do it from now!</string>
    <string name="notification_remind">EQuiz app is under maintaining</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>