<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="7dp"
    tools:context="com.example.luisle.equiz.Activity.CommentAct">

    <TextView
        style="@style/EQuizTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/text_rate"
        android:textSize="30sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RatingBar
                android:id="@+id/rateBarActComment_Stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <TextView
            style="@style/EQuizTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/text_leave_comment"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtAccComment_Comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/EditText_Custom"
            android:gravity="left|top"
            android:inputType="textMultiLine|textCapSentences"
            android:scrollbarAlwaysDrawVerticalTrack="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <Button
                android:id="@+id/btnActComment_Skip"
                style="@style/Button_Custom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_skip" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <Button
                android:id="@+id/btnActComment_Next"
                style="@style/Button_Custom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_next"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
