<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EQuizTheme"
        layout_width="wrap_content"
        layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarDialogDetailExam"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/EQuizTheme"
            layout_width="wrap_content"
            layout_height="wrap_content" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/TextView_Custom"
            android:text="@string/text_exam_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="#205963"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_title" />

            <EditText
                android:id="@+id/edtDialogDetailExam_Title"
                style="@style/EditText_Custom"
                android:enabled="false"
                android:inputType="none"
                android:paddingLeft="5dp" />
        </LinearLayout>

        <TextView
            style="@style/TextView_Custom"
            android:layout_marginTop="5dp"
            android:text="@string/text_exam_duration" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="#205963"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_duration" />

            <EditText
                android:id="@+id/edtDialogDetailExam_Duration"
                style="@style/EditText_Custom"
                android:enabled="false"
                android:inputType="none"
                android:paddingLeft="5dp" />
        </LinearLayout>


        <TextView
            style="@style/TextView_Custom"
            android:layout_marginTop="5dp"
            android:text="@string/text_exam_num_of_question" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="#205963"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_question_mark" />

            <EditText
                android:id="@+id/edtDialogDetailExam_NumberOFQuestion"
                style="@style/EditText_Custom"
                android:enabled="false"
                android:inputType="none"
                android:paddingLeft="5dp" />
        </LinearLayout>

        <TextView
            style="@style/TextView_Custom"
            android:layout_marginTop="5dp"
            android:text="@string/text_exam_created_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="#205963"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_calendar" />

            <EditText
                android:id="@+id/edtDialogDetailExam_CreatedDate"
                style="@style/EditText_Custom"
                android:enabled="false"
                android:inputType="none"
                android:paddingLeft="5dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/txtDialogDetailExam_NumberOfComment"
            style="@style/TextView_Custom"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:lines="1"
            android:text="@string/text_exam_comment"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ProgressBar
                android:id="@+id/pgBarFragExamDetail_LoadingComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcvComment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:padding="5dp">

            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>